--- a/index.html
+++ b/index.html
@@ -110,9 +110,17 @@ const paragraphs = document.getElementsByTagName(&#39;p&#39;)</code></pre>
 <p>Sinon, une fois qu'on a un élément comme <code>divMain</code> ci-dessus, on peut appeler les méthodes <code>getElementsByClassName</code> et <code>getElementsByTagName</code>. En ce qui concerne <code>getElementById</code> on l'appelle plutôt directement sur <code>document</code> car il y a forcément <em>un seul</em> élément avec un certain <code>id</code> dans la page.</p>
 <pre><code>const rowsInMain = divMain.getElementsByClassName(&#39;row&#39;)
 const paragraphsInMain = divMain.getElementsByTagName(&#39;p&#39;)</code></pre>
-<p><strong>Ouvre le fichier <code>exemples/elements/index.html</code></strong>, à la fois dans ton éditeur et dans le navigateur. Active la console de ce dernier ! Mets côte à côte ton éditeur et le navigateur pour mettre en relation le code et ce qu'il fait.</p>
 <h3 id="exercice-1-récupérer-des-éléments">Exercice 1: récupérer des éléments</h3>
-<p><strong>Il faut travailler dans <code>exemples/elements/index.html</code>, en ajoutant du code à la fin.</strong> Les variables sont définies mais tu dois les affecter</p>
+<blockquote>
+<ul>
+<li>Il faut travailler dans <code>exemples/elements/index.html</code>, <strong>en ajoutant du code à la fin.</strong></li>
+<li>Ouvre ce fichier à la fois dans ton éditeur et dans le navigateur, et <strong>active la console</strong> de ce dernier !</li>
+<li>Mets côte à côte ton éditeur et le navigateur pour mettre en relation le code et ce qu'il fait.</li>
+<li>Les variables sont définies mais tu dois les affecter.</li>
+<li>Pour lancer les tests (communs aux exercices 1 et 2) : bouton &quot;Test&quot; en bas à droite !!</li>
+</ul>
+</blockquote>
+<p>Voici ce qui t'es demandé.</p>
 <ul>
 <li>Récupérer dans une variable le <em>premier</em> titre <code>h2</code> de la div <code>#main</code> (indice: trouver <em>tous</em> les <code>h2</code> de <code>#main</code> puis prendre celui à l'index 0 dans ce qui t'a été retourné)</li>
 <li>Récupérer dans une variable les éléments <code>code</code> dans tout le document</li>
