--- a/exemples/html-statique-vers-js/movie-inception.html
+++ b/exemples/html-statique-vers-js/movie-inception.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Movie Site / About</title>
+    <title>Movie Site / Home</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -19,9 +20,10 @@
         </nav>
 
         <div id="main">
-          <h1>About</h1>
+          <h1>Inception</h1>
           <div class="movie-page">
-            <p>This is a site about movies.</p>
+              <a href="movie-inception.html"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/qmDpIHrmpJINaRKAfWQfftjCdyi.jpg" alt="Inception" /></a>
+              <p>Cobb, a skilled thief who commits corporate espionage by infiltrating the subconscious of his targets is offered a chance to regain his old life as payment for a task considered to be impossible.</p>
           </div>
         </div>
 
