--- a/exemples/html-statique-vers-js/movie-matrix.html
+++ b/exemples/html-statique-vers-js/movie-matrix.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Movie Site / About</title>
+    <title>Movie Site / Home</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -19,9 +20,10 @@
         </nav>
 
         <div id="main">
-          <h1>About</h1>
+          <h1>The Matrix</h1>
           <div class="movie-page">
-            <p>This is a site about movies.</p>
+            <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/hEpWvX6Bp79eLxY1kX5ZZJcme5U.jpg" alt="The Matrix" />
+            <p>Set in the 22nd century, The Matrix tells the story of a computer hacker who joins a group of underground insurgents fighting the vast and powerful computers who now rule the earth.</p>
           </div>
         </div>
 
