--- a/exemples/html-statique-vers-js/movie-matrix.html
+++ b/exemples/html-statique-vers-js/movie-matrix.html
@@ -11,6 +11,7 @@
 
       <div id="main">
 
+        <!-- Navigation -->
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -18,6 +19,7 @@
           </ul>
         </nav>
 
+        <!-- Main -->
         <div id="main">
           <h1>The Matrix</h1>
           <div class="movie-page">
@@ -26,6 +28,7 @@
           </div>
         </div>
 
+        <!-- Footer -->
         <footer>
           <div class="inner">&copy; 2018 Wild Movies Toulouse</div>
         </footer>
