--- a/exemples/html-statique-vers-js/about.html
+++ b/exemples/html-statique-vers-js/about.html
@@ -19,7 +19,7 @@
           </ul>
         </nav>
 
-        <!-- Main -->
+        <!-- Content -->
         <h1>About</h1>
         <div class="movie-page">
           <p>This is a site about movies.</p>
