--- a/exemples/html-statique-vers-js/index.html
+++ b/exemples/html-statique-vers-js/index.html
@@ -19,7 +19,7 @@
           </ul>
         </nav>
 
-        <!-- Main -->
+        <!-- Content -->
         <h1>Home</h1>
         <div class="movies">
           <div class="movie-thumb">
