--- a/exemples/html-statique-vers-js/movie-inception.html
+++ b/exemples/html-statique-vers-js/movie-inception.html
@@ -19,7 +19,7 @@
           </ul>
         </nav>
 
-        <!-- Main -->
+        <!-- Content -->
         <h1>Inception</h1>
         <div class="movie-page">
             <a href="movie-inception.html"><img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/qmDpIHrmpJINaRKAfWQfftjCdyi.jpg" alt="Inception" /></a>
