--- a/exemples/html-statique-vers-js/movie-matrix.html
+++ b/exemples/html-statique-vers-js/movie-matrix.html
@@ -19,7 +19,7 @@
           </ul>
         </nav>
 
-        <!-- Main -->
+        <!-- Content -->
         <h1>The Matrix</h1>
         <div class="movie-page">
           <img src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/hEpWvX6Bp79eLxY1kX5ZZJcme5U.jpg" alt="The Matrix" />
