Prépa tests phase 1

--- a/exemples/html-statique-vers-js/index.html
+++ b/exemples/html-statique-vers-js/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Movie Site / Home</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../css/mocha-5.0.5.min.css">
+    <link rel="stylesheet" href="test.css">
   </head>
   <body>
 
@@ -40,6 +42,10 @@
       </div>
 
     </div>
+
+    <script src="../../js/mocha-5.0.5.min.js"></script>
+    <script src="../../js/assert.js"></script>
+    <script src="test.js"></script>
 
   </body>
 </html>
