--- a/exemples/html-statique-vers-js/index.html
+++ b/exemples/html-statique-vers-js/index.html
@@ -43,8 +43,13 @@
 
     </div>
 
+    <script src="app.js"></script>
+
+    <!-- DEPENDANCES DU SCRIPT DE TEST -->
     <script src="../../js/mocha-5.0.5.min.js"></script>
     <script src="../../js/assert.js"></script>
+
+    <!-- SCRIPT DE TEST -->
     <script src="test.js"></script>
 
   </body>
