Remove app.js (à eux de le mettre)

--- a/exemples/html-statique-vers-js/index.html
+++ b/exemples/html-statique-vers-js/index.html
@@ -43,7 +43,8 @@
 
     </div>
 
-    <script src="app.js"></script>
+    <!-- SCRIPT(S) DE L'APP + DEPENDANCES -->
+
 
     <!-- DEPENDANCES DU SCRIPT DE TEST -->
     <script src="../../js/mocha-5.0.5.min.js"></script>
