add dojo repo link

--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@ for(let i=0;i&lt;allParagraphs.length;i++) allParagraphs[i].innerHTML = `Paragra
 <li>Ajouter <code>avec contenu modifié</code> (<strong>avec l'espace avant avec</strong>) après le contenu du 3ème paragraphe de la 2ème div <code>.doc-section</code></li>
 </ul>
 <h2 id="dune-application-html-statique-à-une-spa-js">D'une application HTML statique à une &quot;SPA&quot; JS</h2>
+<blockquote>
+<p>On a déjà parlé de tout ça en dojo... Pour le coup, comme on a repris le HTML de base du hackathon, votre travail du dojo est sur le <a href="https://github.com/bhubr/hero/">dépôt de ressources pour le hackathon</a>. Vous avez une branche par groupe, <code>dojo-groupe1</code> et <code>dojo-groupe2</code>. Je vous le donne comme référence, mais lisez d'abord et faites les exemples ci-dessous, ça reprend les mêmes principes.</p>
+</blockquote>
 <p>Bon, tu l'auras compris, SPA ici n'a aucun rapport avec nos amies les bêtes.</p>
 <p>C'est un acronyme pour &quot;Single-Page Application&quot;. Kézako ? Pense à comment tu as travaillé sur ton 1er projet: comme il s'agissait d'un blog statique, tu avais créé plusieurs pages, dans des fichiers HTML séparés, avec des liens de l'une à l'autre, en passant les noms des fichiers dans les attributs <code>href</code> des balises <code>&lt;a&gt;</code>.</p>
 <p>On a fait comme cela depuis les débuts du web, mais c'est assez &quot;old school&quot;, surtout quand on veut créer une application très dynamique. En effet, par défaut, <strong>cliquer sur un lien, ou soumettre un formulaire, provoque le rechargement de la page</strong> avec une nouvelle URL. C'est assez &quot;lourd&quot; car il faut faire un aller-retour complet vers le serveur pour obtenir le HTML.</p>
