Example with GET params

--- a/exemples/serveur/public/exemple7/index.html
+++ b/exemples/serveur/public/exemple7/index.html
@@ -11,6 +11,8 @@
     <p>Il charge une feuille de style et un <a href="/js/script.js">script</a>.</p>
     <p class="counter-wrap">Compteur du serveur : <span id="counter">Inconnu</span></p>
 
+    <p><strong>Dans cet exemple, on va chercher la valeur du compteur calculé par le
+      serveur</strong>, celui-ci étant incrémenté à chaque requête.</p>
     <button>Requête</button>
     <p>Pour déclencher une requête vers le serveur, clique ci-dessus !</p>
     <script src="/js/script.js"></script>
