Example on POST submission

--- a/exemples/serveur/public/exemple9/index.html
+++ b/exemples/serveur/public/exemple9/index.html
@@ -2,11 +2,11 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
-    <title>Client-serveur #2</title>
+    <title>Client-serveur #3</title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <h1>Echange client-serveur #3</h1>
+    <h1>Echange client-serveur #3 - formulaire envoyé par GET</h1>
     <p>Fichier html: <code>public/exemple9/index.html</code> Script: <a href="/js/script.js">script</a>.<p>
 
     <p>
